only build sample opengles2 for android

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,6 +222,11 @@ set (CEGUI_SAMPLES_RENDERER_DIRECT3D11_ACTIVE ${CEGUI_BUILD_RENDERER_DIRECT3D11}
 set (CEGUI_SAMPLES_RENDERER_DIRECTFB_ACTIVE ${CEGUI_BUILD_RENDERER_DIRECTFB})
 set (CEGUI_SAMPLES_RENDERER_OPENGLES2_ACTIVE ${CEGUI_BUILD_RENDERER_OPENGLES2})
 
+#Only build the opengles2 sample renderer for Android
+if (NOT ANDROID) 
+    set (CEGUI_SAMPLES_RENDERER_OPENGLES2_ACTIVE FALSE)
+endif()
+
 # Ogre and OpenGL have dependencies for the sample browser, if these are not available then the samples will be OFF by default   
 if (CEGUI_BUILD_RENDERER_OGRE AND NOT CEGUI_OGRE_DEPS_AVAILABLE)
     set (_CEGUI_SAMPLES_ENABLED_DEFAULT FALSE)
