MOD: changed CMake files to only add the template executable when the deps are found

--- a/application_templates/CMakeLists.txt
+++ b/application_templates/CMakeLists.txt
@@ -2,20 +2,27 @@ option(CEGUI_BUILD_APPLICATION_TEMPLATE_SDL2 "Specifies whether to build the app
 option(CEGUI_BUILD_APPLICATION_TEMPLATE_GLFW3 "Specifies whether to build the application template for GLFW3" TRUE)
 
 if(CEGUI_BUILD_APPLICATION_TEMPLATE_SDL2 AND CEGUI_BUILD_RENDERER_OPENGL)
-    add_executable(SDL2 SDL2.cpp)
-    add_dependencies(SDL2 ${CEGUI_BASE_LIBNAME} ${CEGUI_OPENGL_RENDERER_LIBNAME})
-    list(APPEND LIBS "SDL2")
+    if(${SDL2_FOUND})
+        add_executable(CEGUITemplate_SDL2 SDL2.cpp)
+        cegui_add_dependency(CEGUITemplate_SDL2 ${CEGUI_BASE_LIBNAME})
+        cegui_add_dependency(CEGUITemplate_SDL2 ${CEGUI_OPENGL_RENDERER_LIBNAME})
+        include_directories(CEGUITemplate_SDL2 ${SDL2_H_PATH})
+        cegui_target_link_libraries(CEGUITemplate_SDL2 SDL2)
+    else()
+        message(STATUS "Disabling build of CEGUITemplate_SDL2 because SDL2 is missing.")
+        set(CEGUI_BUILD_APPLICATION_TEMPLATE_SDL2 FALSE)
+    endif()
 endif()
 
 if(CEGUI_BUILD_APPLICATION_TEMPLATE_GLFW3 AND CEGUI_BUILD_RENDERER_OPENGL)
-    add_executable(glfw3 glfw3.cpp)
-    add_dependencies(glfw3 ${CEGUI_BASE_LIBNAME} ${CEGUI_OPENGL_RENDERER_LIBNAME})
-    list(APPEND LIBS "glfw3")
-endif()
-
-if(NOT "${LIBS}" STREQUAL "")
-    message(STATUS "Please make sure you have the following libs (and corresponding dependencies) installed on your system:")
-    foreach(LIB ${LIBS})
-        message(STATUS ${LIB})
-    endforeach()
+    if(${GLFW3_FOUND})
+        add_executable(CEGUITemplate_GLFW3 glfw3.cpp)
+        cegui_add_dependency(CEGUITemplate_GLFW3 ${CEGUI_BASE_LIBNAME})
+        cegui_add_dependency(CEGUITemplate_GLFW3 ${CEGUI_OPENGL_RENDERER_LIBNAME})
+        include_directories(CEGUITemplate_GLFW3 ${GLFW3_H_PATH})
+        cegui_target_link_libraries(CEGUITemplate_GLFW3 GLFW3)
+    else()
+        message(STATUS "Disabling build of CEGUITemplate_GLFW3 because GLFW3 is missing.")
+        set(CEGUI_BUILD_APPLICATION_TEMPLATE_GLFW3 FALSE)
+    endif()        
 endif()
