MOD: Increasing warning message visibility for Samplebrowser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -238,16 +238,16 @@ endif()
 if (CEGUI_BUILD_RENDERER_OGRE AND NOT CEGUI_OGRE_DEPS_AVAILABLE)
     set (_CEGUI_SAMPLES_ENABLED_DEFAULT FALSE)
     if (NOT OIS_FOUND)
-        message(STATUS "The SampleFramework is deactivated due to missing Ogre dependencies (OIS not found)")
+        message(WARNING "The SampleFramework is deactivated due to missing Ogre dependencies (OIS not found)")
     else()
-        message(STATUS "The SampleFramework is deactivated due to missing Ogre dependencies (boost libraries)")
+        message(WARNING "The SampleFramework is deactivated due to missing Ogre dependencies (boost libraries)")
     endif()
 endif()
 
 if (CEGUI_SAMPLES_RENDERER_OPENGL_ACTIVE)
     if(NOT GLFW_FOUND)
         set (CEGUI_SAMPLES_RENDERER_OPENGL_ACTIVE FALSE)
-        message(STATUS "Info: The OpenGL- and/or OpenGL3 Renderers are disabled in the SampleBrowser because of missing dependencies (GLFW library).  Please add the GFLW dependency and run 'Configure' in CMake again, in case you want to run the SampleBrowser using the OpenGL or OpenGL3 Renderers.")
+        message(WARNING "Info: The OpenGL- and/or OpenGL3 Renderers are disabled in the SampleBrowser because of missing dependencies (GLFW library).  Please add the GFLW dependency and run 'Configure' in CMake again, in case you want to run the SampleBrowser using the OpenGL or OpenGL3 Renderers.")
     endif()
 endif()
 
