--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -5,22 +5,24 @@ file(READ ${CMAKE_CURRENT_SOURCE_DIR}/common/SamplesXmlHeader.xml DEMO_META_DATA
 file(APPEND ${CMAKE_BINARY_DIR}/datafiles/samples/samples.xml ${DEMO_META_DATA})
 
 add_subdirectory(HelloWorld)
-add_subdirectory(WidgetDemo)
-add_subdirectory(EffectsDemo)
-add_subdirectory(FontDemo)
+add_subdirectory(LookNFeelOverview)
 
-add_subdirectory(Demo6)
-add_subdirectory(DragDropDemo)
-add_subdirectory(EditboxValidationDemo)
 add_subdirectory(GameMenu)
 add_subdirectory(HUDDemo)
+add_subdirectory(DragDropDemo)
 add_subdirectory(InventoryDemo)
+add_subdirectory(EffectsDemo)
+add_subdirectory(FontDemo)
+add_subdirectory(Demo6)
+
+add_subdirectory(EditboxValidationDemo)
 add_subdirectory(Minesweeper)
 add_subdirectory(ScrollablePaneDemo)
 add_subdirectory(TabControlDemo)
+add_subdirectory(CommonDialogsDemo)
+add_subdirectory(WidgetDemo)
 add_subdirectory(TextDemo)
 add_subdirectory(TreeDemo)
-add_subdirectory(CommonDialogsDemo)
 
 if (CEGUI_BUILD_LUA_MODULE)
     # add_subdirectory(Demo8)
