--- a/application_templates/CMakeLists.txt
+++ b/application_templates/CMakeLists.txt
@@ -1,28 +1,30 @@
-option(CEGUI_BUILD_APPLICATION_TEMPLATE_SDL2 "Specifies whether to build the application template for SDL2" TRUE)
-option(CEGUI_BUILD_APPLICATION_TEMPLATE_GLFW3 "Specifies whether to build the application template for GLFW3" TRUE)
+cegui_dependent_option(CEGUI_BUILD_APPLICATION_TEMPLATE_SDL2 "Specifies whether to build the application template for SDL2" "SDL2_FOUND;CEGUI_BUILD_RENDERER_OPENGL")
+cegui_dependent_option(CEGUI_BUILD_APPLICATION_TEMPLATE_GLFW3 "Specifies whether to build the application template for GLFW3" "GLFW3_FOUND;CEGUI_BUILD_RENDERER_OPENGL")
 
-if(CEGUI_BUILD_APPLICATION_TEMPLATE_SDL2 AND CEGUI_BUILD_RENDERER_OPENGL)
-    if(${SDL2_FOUND})
+if(CEGUI_BUILD_RENDERER_OPENGL)
+    if(${CEGUI_BUILD_APPLICATION_TEMPLATE_SDL2})
         add_executable(CEGUITemplate_SDL2 SDL2.cpp)
+        
         cegui_add_dependency(CEGUITemplate_SDL2 ${CEGUI_BASE_LIBNAME})
+        cegui_target_link_libraries(CEGUITemplate_SDL2 ${CEGUI_BASE_LIBNAME})
+        
         cegui_add_dependency(CEGUITemplate_SDL2 ${CEGUI_OPENGL_RENDERER_LIBNAME})
-        include_directories(CEGUITemplate_SDL2 ${SDL2_H_PATH})
-        cegui_target_link_libraries(CEGUITemplate_SDL2 SDL2)
-    else()
-        message(STATUS "Disabling build of CEGUITemplate_SDL2 because SDL2 is missing.")
-        set(CEGUI_BUILD_APPLICATION_TEMPLATE_SDL2 FALSE)
+        cegui_target_link_libraries(CEGUITemplate_SDL2 ${CEGUI_OPENGL_RENDERER_LIBNAME})
+        
+        include_directories(CEGUITemplate_SDL2 ${SDL2_INCLUDE_DIR})
+        cegui_target_link_libraries(CEGUITemplate_SDL2 ${SDL2_LIBRARY})
     endif()
-endif()
 
-if(CEGUI_BUILD_APPLICATION_TEMPLATE_GLFW3 AND CEGUI_BUILD_RENDERER_OPENGL)
-    if(${GLFW3_FOUND})
+    if(${CEGUI_BUILD_APPLICATION_TEMPLATE_GLFW3})
         add_executable(CEGUITemplate_GLFW3 glfw3.cpp)
+        
         cegui_add_dependency(CEGUITemplate_GLFW3 ${CEGUI_BASE_LIBNAME})
+        cegui_target_link_libraries(CEGUITemplate_GLFW3)
+        
         cegui_add_dependency(CEGUITemplate_GLFW3 ${CEGUI_OPENGL_RENDERER_LIBNAME})
+        cegui_target_link_libraries(CEGUITemplate_GLFW3 ${CEGUI_OPENGL_RENDERER_LIBNAME})
+        
         include_directories(CEGUITemplate_GLFW3 ${GLFW3_H_PATH})
-        cegui_target_link_libraries(CEGUITemplate_GLFW3 GLFW3)
-    else()
-        message(STATUS "Disabling build of CEGUITemplate_GLFW3 because GLFW3 is missing.")
-        set(CEGUI_BUILD_APPLICATION_TEMPLATE_GLFW3 FALSE)
-    endif()        
+        cegui_target_link_libraries(CEGUITemplate_GLFW3 ${GLFW3_LIBRARY})
+    endif()
 endif()
