MOD: samples.h will now be generated with rel paths and added files to IDE

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -43,7 +43,7 @@ endforeach()
 file(WRITE ${SAMPLE_LIST_HEADER} "#ifndef _SamplesListHeader_h_\n#define _SamplesListHeader_h_\n\n#include \"Sample.h\"\n")
 file(WRITE ${SAMPLE_LIST_CODE} "std::vector<Sample*> samples;")
 foreach(sample ${SAMPLES_LIST})
-    set(_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${sample}/${sample}.h")
+    set(_PATH "${sample}/${sample}.h")
     file(APPEND ${SAMPLE_LIST_HEADER} "\n#include \"${_PATH}\"")
     file(APPEND ${SAMPLE_LIST_CODE} "\nsamples.push_back(new ${sample}Sample());")
 endforeach()
