Fix minor issues #3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -231,9 +231,9 @@ endif ()
 
 if (CEGUI_BUILD_RENDERER_OPENGL3 AND CEGUI_USE_EPOXY)
     set (CEGUI_SUPPORT_RENDERER_OPENGLES2 TRUE)
-    set (CEGUI_OPENGL_VER_MAJOR_FORCE "" CACHE STRING "Run the samples as if a specific OpenGL(ES) major version is used. Useful for testing.")
+    set (CEGUI_OPENGL_VER_MAJOR_FORCE "" CACHE STRING "Run the samples as if a specific OpenGL (desktop or ES) major version is used. Useful for testing.")
     mark_as_advanced (CEGUI_OPENGL_VER_MAJOR_FORCE)
-    set (CEGUI_OPENGL_VER_MINOR_FORCE "0" CACHE STRING "Run the samples as if a specific OpenGL(ES) minor version is used. Useful for testing.")
+    set (CEGUI_OPENGL_VER_MINOR_FORCE "0" CACHE STRING "Run the samples as if a specific OpenGL (desktop or ES) minor version is used. Useful for testing.")
     mark_as_advanced (CEGUI_OPENGL_VER_MINOR_FORCE)
 else ()
     set (CEGUI_SUPPORT_RENDERER_OPENGLES2 FALSE)
