--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,20 @@ endif()
 if(ANDROID)
     set(CMAKE_FIND_ROOT_PATH ${CEGUI_DEPENDENCIES_DIR} "${CMAKE_FIND_ROOT_PATH}")
     set (CMAKE_LIBRARY_ARCHITECTURE ${ANDROID_ABI})
-endif() 
+endif()
+
+if ((CMAKE_C_COMPILER_ID STREQUAL "GNU") OR (CMAKE_C_COMPILER_ID STREQUAL "Clang"))
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu11")
+elseif (NOT CMAKE_VERSION VERSION_LESS "3.1")
+    set (CMAKE_C_STANDARD_REQUIRED TRUE)
+    set (CMAKE_C_STANDARD "11")
+endif ()
+if ((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") OR (CMAKE_CXX_COMPILER_ID STREQUAL "Clang"))
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
+elseif (NOT CMAKE_VERSION VERSION_LESS "3.1")
+    set (CMAKE_CXX_STANDARD_REQUIRED TRUE)
+    set (CMAKE_CXX_STANDARD "11")
+endif ()
 
 # Look for packages
 find_package(PCRE)
