--- a/samples_framework/CMakeLists.txt
+++ b/samples_framework/CMakeLists.txt
@@ -307,18 +307,33 @@ if (CEGUI_SAMPLES_RENDERER_IRRLICHT_ACTIVE)
 endif()
 
 if (CEGUI_SAMPLES_RENDERER_DIRECT3D9_ACTIVE OR CEGUI_SAMPLES_RENDERER_DIRECT3D10_ACTIVE OR CEGUI_SAMPLES_RENDERER_DIRECT3D11_ACTIVE)
-    cegui_target_link_libraries(${CEGUI_TARGET_NAME} dxerr)
+
+    if (MINGW)
+        cegui_target_link_libraries(${CEGUI_TARGET_NAME} dxerr9 dinput8 dxguid)
+    else ()
+        cegui_target_link_libraries(${CEGUI_TARGET_NAME} dxerr)
+    endif()
 
     if (CEGUI_SAMPLES_RENDERER_DIRECT3D9_ACTIVE)
         cegui_target_link_libraries(${CEGUI_TARGET_NAME} ${CEGUI_DIRECT3D9_RENDERER_LIBNAME} d3d9)
     endif()
 
     if (CEGUI_SAMPLES_RENDERER_DIRECT3D10_ACTIVE)
-        cegui_target_link_libraries(${CEGUI_TARGET_NAME} ${CEGUI_DIRECT3D10_RENDERER_LIBNAME} d3d10)
+        cegui_target_link_libraries(${CEGUI_TARGET_NAME} ${CEGUI_DIRECT3D10_RENDERER_LIBNAME})
+        if (MINGW)
+            cegui_target_link_libraries(${CEGUI_TARGET_NAME} d3dx10_43)
+        else ()
+            cegui_target_link_libraries(${CEGUI_TARGET_NAME} d3d10)
+        endif()
     endif()
 
     if (CEGUI_SAMPLES_RENDERER_DIRECT3D11_ACTIVE)
-        cegui_target_link_libraries(${CEGUI_TARGET_NAME} ${CEGUI_DIRECT3D11_RENDERER_LIBNAME} d3d11)
+        cegui_target_link_libraries(${CEGUI_TARGET_NAME} ${CEGUI_DIRECT3D11_RENDERER_LIBNAME})
+        if (MINGW)
+            cegui_target_link_libraries(${CEGUI_TARGET_NAME} d3xd11_43)
+        else ()
+            cegui_target_link_libraries(${CEGUI_TARGET_NAME} d3d11)
+        endif()
     endif()
 
 endif()
