--- a/samples/common/include/CEGUISamplesConfig.h.in
+++ b/samples/common/include/CEGUISamplesConfig.h.in
@@ -41,6 +41,7 @@ Each item in here has a comment to describe what it's for.
 // Bring in main config file
 #include "CEGUI/Config.h"
 
+#cmakedefine CEGUI_SAMPLE_DATAPATH "@CEGUI_SAMPLE_DATAPATH@"
 #ifndef CEGUI_SAMPLE_DATAPATH
 
 // Define the default place where samples will look for datafiles
